# labs_2term

./: README.md
1lab/task1/: rectangle.cpp  rectangle.h  rectangle.ui
1lab/task2/: CMakeLists.txt  canvas.cpp  circle.cpp  circle.h  dialogwindow.cpp  dialogwindow.h  dialogwindow.ui  eightpointedstar.cpp  ellipse.cpp  ellipse.h  figure.cpp  figure.h  fivepointedstar.cpp  fivepointedstar.h  hexagon.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallelogram.h  rectangle.cpp  rhomb.cpp  rhomb.h  square.h  star.h  triangle.h
1lab/task3/: date.cpp  date.h  dialog.cpp  mainwindow.cpp  mainwindow.h
1lab/task4/: CMakeLists.txt  book.cpp  book.h  borrowedbook.cpp  borrowedbook.h  date.cpp  date.h  library.cpp  library.h  library.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
1lab/task5/: main.cpp
1lab/task6/: main.cpp
OAiP/1lab/task1/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h  resource.qrc
OAiP/1lab/task2/: CMakeLists.txt  canvas.h  canvas.ui  eightpointedstar.h  hexagon.h  mainwindow.ui  parallelogram.cpp  rectangle.h  sixpointedstar.cpp  sixpointedstar.h  square.cpp  star.cpp  triangle.cpp
OAiP/1lab/task3/: CMakeLists.txt  date.cpp  dialog.h  dialog.ui  resource.qrc
OAiP/1lab/task4/: CMakeLists.txt  book.h  reader.h
OAiP/2lab/shared_ptr_list/: CMakeLists.txt  List.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  smart_ptrs.h
Programming/lab1/: Program.cs
Programming/lab4/: Class1.cs  StationTests.cs
Programming/lab5/: Passenger.cs  Program.cs  Station.cs  Ticket.cs
Programming/lab6/: BlockOfFlats.cs  BlockOfFlatsTests.cs  Building.cs  ClassDiagram1.cd  Factory.cs  FactoryTests.cs  Program.cs
Programming/lab7/: Program.cs  Rational.cs  RationalTests.cs
Programming/lab8/: Coupon.cs  CouponTests.cs  IPrice.cs  Program.cs  Station.cs  StationTests.cs  Ticket.cs
(+113 files in other folders)
